tests/it/testdata/json_path-error.txt
---------- Input ----------
x
---------- Output ---------
error: 
  --> JsonPath:1:1
  |
1 | x
  | ^
  | |
  | expected <Dollar>, <AtSign>, <Period>, <DoublePeriod>, <LBracket>, or `[`
  | while parsing `<json_path>`


---------- Input ----------
$.[
---------- Output ---------
error: 
  --> JsonPath:1:3
  |
1 | $.[
  | - ^ expected <Multiply>, <Ident>, or <QuotedString>
  | |  
  | while parsing `<json_path>`


---------- Input ----------
$X
---------- Output ---------
error: 
  --> JsonPath:1:2
  |
1 | $X
  | -^ expected <Dollar>, <AtSign>, <Period>, <DoublePeriod>, <LBracket>, or `[`
  | | 
  | while parsing `<json_path>`


---------- Input ----------
$.
---------- Output ---------
error: 
  --> JsonPath:1:3
  |
1 | $.
  | - ^ expected <Multiply>, <Ident>, or <QuotedString>
  | | 
  | while parsing `<json_path>`


---------- Input ----------
$.prop.
---------- Output ---------
error: 
  --> JsonPath:1:8
  |
1 | $.prop.
  | -      ^ expected <Multiply>, <Ident>, or <QuotedString>
  | |      
  | while parsing `<json_path>`


---------- Input ----------
$..
---------- Output ---------
error: 
  --> JsonPath:1:4
  |
1 | $..
  | -  ^ expected <Multiply>, <Ident>, or <QuotedString>
  | |  
  | while parsing `<json_path>`


---------- Input ----------
$.prop..
---------- Output ---------
error: 
  --> JsonPath:1:9
  |
1 | $.prop..
  | -       ^ expected <Multiply>, <Ident>, or <QuotedString>
  | |       
  | while parsing `<json_path>`


---------- Input ----------
$.foo bar
---------- Output ---------
error: 
  --> JsonPath:1:7
  |
1 | $.foo bar
  | -     ^^^ expected <Dollar>, <AtSign>, <Period>, <DoublePeriod>, <LBracket>, or `[`
  | |      
  | while parsing `<json_path>`


---------- Input ----------
$[0, 1, 2 4]
---------- Output ---------
error: 
  --> JsonPath:1:11
  |
1 | $[0, 1, 2 4]
  | -         ^ expected `,` or `]`
  | |          
  | while parsing `<json_path>`


---------- Input ----------
$['1','2',]
---------- Output ---------
error: 
  --> JsonPath:1:11
  |
1 | $['1','2',]
  | -         ^ expected <QuotedString>
  | |          
  | while parsing `<json_path>`


---------- Input ----------
$['1', ,'3']
---------- Output ---------
error: 
  --> JsonPath:1:8
  |
1 | $['1', ,'3']
  | -      ^ expected <QuotedString>
  | |       
  | while parsing `<json_path>`


---------- Input ----------
$['aaa'}'bbb']
---------- Output ---------
error: 
  --> JsonPath:1:8
  |
1 | $['aaa'}'bbb']
  | -      ^ expected `,` or `]`
  | |       
  | while parsing `<json_path>`


